FIX : infinite scroll wasn't always working due to horizontal scrollbar FIX : home footer wasn't displayed correctly on high resolutions screens

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -20,7 +20,7 @@ body.modal-open {
 body.courses, body.programs, body.teachers {
     
     /* force scrollbar on courses/programs/teachers to avoid reflow on infrequent results pages with too few results */
-    overflow: scroll;
+    overflow-y: scroll;
 }
 
 /* MENU & NAVIGATION */
@@ -174,6 +174,10 @@ main {
 }
 
 /* FOOTER */
+
+footer {
+    box-shadow: 0 50vh 0 50vh #f8f9fa;
+}
 
 footer li {
     list-style: none;
